--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portfolio
+  name: personal-website
   namespace: argocd
   annotations:
     argocd-image-updater.argoproj.io/image-list: website=harbor.schwartzdaniel.de/private/personal-website
