--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: harbor.schwartzdaniel.de/private/personal-website
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 imagePullSecrets:
   - name: harbor-pull-secret
