--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -7,8 +7,10 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: website=harbor.schwartzdaniel.de/private/personal-website
     argocd-image-updater.argoproj.io/website.allow-tags: |
       regexp:^[0-9a-f]{40}$
-    argocd-image-updater.argoproj.io/website.update-strategy: latest
-    argocd-image-updater.argoproj.io/website.force-update: "true"
+    argocd-image-updater.argoproj.io/website.helm.image-name: image.repository
+    argocd-image-updater.argoproj.io/website.helm.image-tag: image.tag
+    argocd-image-updater.argoproj.io/write-back-method: argocd
+    argocd-image-updater.argoproj.io/website.update-strategy: newest-build
 
 spec:
   project: default
