--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -2,7 +2,7 @@ fullname: personal-website
 replicaCount: 1
 image:
   repository: harbor.schwartzdaniel.de/private/personal-website
-  tag: "dev"
+  tag: "0000000000000000000000000000000000000000"
   pullPolicy: Always
 
 imagePullSecrets:
